# 2023-project-JeCheeseSmith

./: CMakeLists.txt  Doxygen_config.bak  Doxygen_config.bak.save  LICENSE.md  README.md  main.cpp
.circleci/: config.yml
docs/html/: AbstractFactory_8h.html  AbstractFactory_8h__dep__incl.map  AbstractFactory_8h__dep__incl.md5  AbstractFactory_8h__incl.map  AbstractFactory_8h__incl.md5  AbstractFactory_8h_source.html  CMakeLists_8txt.html  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8h.html  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  DesignByContract_8h.html  DesignByContract_8h__dep__incl.map  DesignByContract_8h__dep__incl.md5  DesignByContract_8h__incl.map  DesignByContract_8h__incl.md5  DesignByContract_8h_source.html  EntityModel_8cpp.html  EntityModel_8cpp__incl.map  EntityModel_8cpp__incl.md5  EntityModel_8h.html  EntityModel_8h__dep__incl.map  EntityModel_8h__dep__incl.md5  EntityModel_8h__incl.map  EntityModel_8h__incl.md5  EntityModel_8h_source.html  EntityView_8cpp.html  EntityView_8cpp__incl.map  EntityView_8cpp__incl.md5  EntityView_8h.html  EntityView_8h__dep__incl.map  EntityView_8h__dep__incl.md5  EntityView_8h__incl.map  EntityView_8h__incl.md5  EntityView_8h_source.html  (+311 more)
lib/: DesignByContract.h  Singleton.h  helper.cpp  helper.h
logic/: AbstractFactory.h  EntityModel.cpp  EntityModel.h  Generator.cpp  Generator.h  Observer.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h
logic/output/: score.txt
representation/control/: Game.cpp  Game.h  States.cpp  States.h
representation/view/: Camera.cpp  Camera.h  EntityView.cpp  EntityView.h  View.cpp  View.h  (+2 more)
(+98 files in other folders)
